<resources>
    <string name="app_name">News APP</string>
    <string name="headlines">Headlines</string>
    <string name="saved">Saved</string>
    <string name="sources">Sources</string>
    <string name="search">Search</string>
    <string name="source_description">%1$s | %2$s</string>
    <string name="null_content_description">We can\'t display the content right now.\n Try later</string>
    <string name="language_english">English</string>
    <string name="language_russian">Русский</string>
    <string name="language_german">Deutsch</string>
    <string name="language_arabic">عربي</string>
    <string name="language_spanish">Español</string>
    <string name="language_french">Français</string>
    <string name="language_italian">Italiano</string>
    <string name="language_chinese">中国人</string>
    <string name="filter_popular">Popular</string>
    <string name="filter_new">New</string>
    <string name="filter_relevant">Relevant</string>
    <string name="category_business">Business</string>
    <string name="category_science">Science</string>
    <string name="category_general">General</string>
    <string name="category_health">Health</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_sports">Sports</string>
    <string name="category_technology">Technology</string>
    <string name="refresh_text">Refresh</string>
    <string name="no_internet_text">No internet connection</string>
    <string name="something_wrong_text">Something went wrong\n Try later</string>
    <string name="date_text">Date</string>
    <string name="choose_data_text">Choose data</string>
    <string name="language_text">Language</string>
    <string name="general_tab">General</string>
    <string name="business_tab">Business</string>
    <string name="traveling_tab">Traveling</string>
    <string name="category_fitler_text">Category</string>
    <string name="language_filter_text">Language</string>
    <string name="save_button">Save</string>
    <string name="filter_button">Filter</string>
    <string name="done_button">Done</string>
    <string name="search_button">Search</string>
    <string name="category_query_hint">category</string>
    <string name="sources_title">Sources</string>
    <string name="filters_title">Filters</string>
    <string name="saved_title">Saved</string>
    <string name="select_date_text">Select date</string>
</resources>