<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textholder_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/category_fitler_text"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/category_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textholder_category"
        app:layout_constraintTop_toBottomOf="@id/textholder_category"
        app:singleSelection="true">

    <com.google.android.material.chip.Chip
        android:id="@+id/category_chip_business"
        style="@style/Widget.Material3.Chip.Suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_business"
        app:chipBackgroundColor="@color/chip_background_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/category_chip_science"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_science"
            app:chipBackgroundColor="@color/chip_background_color" />


        <com.google.android.material.chip.Chip
            android:id="@+id/category_chip_general"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_general"
            app:chipBackgroundColor="@color/chip_background_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/category_chip_health"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_health"
            app:chipBackgroundColor="@color/chip_background_color" />


        <com.google.android.material.chip.Chip
            android:id="@+id/category_chip_entertainment"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_entertainment"
            app:chipBackgroundColor="@color/chip_background_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/category_chip_sports"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_sports"
            app:chipBackgroundColor="@color/chip_background_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/category_chip_technology"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_technology"
            app:chipBackgroundColor="@color/chip_background_color" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textholder_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/language_filter_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/category_chip_group"
        app:layout_constraintTop_toBottomOf="@id/category_chip_group" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/language_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textholder_language"
        app:layout_constraintTop_toBottomOf="@id/textholder_language"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/language_chip_english"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_english"
            app:chipBackgroundColor="@color/chip_background_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/language_chip_russian"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_russian"
            app:chipBackgroundColor="@color/chip_background_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/language_chip_german"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_german"
            app:chipBackgroundColor="@color/chip_background_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/language_chip_arabic"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_arabic"
            app:chipBackgroundColor="@color/chip_background_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/language_chip_spanish"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_spanish"
            app:chipBackgroundColor="@color/chip_background_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/language_chip_french"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_french"
            app:chipBackgroundColor="@color/chip_background_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/language_chip_italian"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_italian"
            app:chipBackgroundColor="@color/chip_background_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/language_chip_сhinese"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_chinese"
            app:chipBackgroundColor="@color/chip_background_color" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>